[project]
name = "gem-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.4.1",
    "diskcache>=5.6.3",
    "evaluate>=0.4.3",
    "logzero>=1.7.0",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pycountry>=24.6.1",
    "repro2>=0.0.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
heavy = ["bert-score>=0.3.13"]
